[gd_scene load_steps=3 format=3 uid="uid://by67nbhsw3606"]

[ext_resource type="Script" path="res://scripts/table_row.gd" id="1_100c6"]
[ext_resource type="PackedScene" uid="uid://bx43485l5x8sk" path="res://scenes/text_edit_no_tab.tscn" id="2_rmej4"]

[node name="TableRow" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_constants/separation = 4
script = ExtResource("1_100c6")

[node name="DateText" parent="." instance=ExtResource("2_rmej4")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="ServiceText" parent="." instance=ExtResource("2_rmej4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PriceText" parent="." instance=ExtResource("2_rmej4")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[connection signal="gui_input" from="PriceText" to="." method="_on_price_text_gui_input"]
[connection signal="lost_focus_by_tab" from="PriceText" to="." method="_on_price_text_lost_focus_by_tab"]
